la imagen mas el hedear

--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
 <body>
     <header>
         <ul>
-            <li>mauro</li>
-            <li>cdcddce</li>
-            <li>cdeji9vfrj</li>
+            <a href="">
+            <li>HOME</li></a>
+            <li>LOGIN</li>
+            <li>REGISTER</li>
         </ul>
+        <nav>
+
+        </nav>
+        <a href="./index.html"
+        >
+    <img src="./logo goloriolo.png" alt=""></a>
+
     </header>
+    
 </body>
 </html>
