--- a/login.html
+++ b/login.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <form action=""></form>
+    <div>
+        <a href="./index.html">
+            <img src="" alt="">
+        </a>
+    </div>
+    <form class="register" action="index.html" method="get">
+        <div>
+            <label for="email"></label>
+            <input id="email" type="text" name="email" placeholder="ingrese su email" value="" required>
+        </div>
+        <div>
+            <label for="contraseña"></label>
+            <input id="contraseña" type="password" name="contraseña" placeholder="ingrese su contraseña" value="" required>
+        </div>
+    </form>
+    <div>
+        <label for=""></label>
+    </div>
 </body>
 </html>
