pagina del login 2 (actualizada)

--- a/login.html
+++ b/login.html
@@ -21,9 +21,11 @@
             <label for="contraseña"></label>
             <input id="contraseña" type="password" name="contraseña" placeholder="ingrese su contraseña" value="" required>
         </div>
+        <div>
+            <button type="submit">Ingresar</button>
+        </div>
+        <a href="./register.html">No tengo una cuenta</a>
     </form>
-    <div>
-        <label for=""></label>
-    </div>
+    
 </body>
 </html>
