--- a/login.html
+++ b/login.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <div>
-        <a href="./index.html">
-            <img src="" alt="">
-        </a>
+        <a href="./index.html"></a>
     </div>
     <form class="register" action="index.html" method="get">
         <div>
