--- a/login.html
+++ b/login.html
@@ -7,6 +7,21 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+        <header>
+        <a href="./home.html">
+            <img src="./logo goloriolo.png" alt="">
+        </a>
+        <form action="./search.html">
+            <input type="text">
+            <button>Buscar...</button>
+        </form>
+        <div>
+            <a href="./login.html">Login</a>
+            <a href="./register.html">Registrarse</a>
+        </div>
+
+    </header>
+    
     <div>
         <a href="./index.html">
             <img src="" alt="">
