--- a/home.html
+++ b/home.html
@@ -20,6 +20,17 @@
         </div>
 
     </header>
-    
+
+    <body>
+        
+    </body>
+
+    <footer>
+<ul>
+    <li>Andres Lopez Oriolo</li>
+    <li>Mauro Dagnino</li>
+    <li>Lucas Daud</li>
+</ul>
+    </footer>
 </body>
 </html>
