--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
         </div>
 
     </header>
-    
+
     <div>
         <a href="./index.html"></a>
     </div>
@@ -40,5 +40,12 @@
         <a href="./register.html">No tengo una cuenta</a>
     </form>
     
+        <footer>
+<ul>
+    <li>Andres Lopez Oriolo</li>
+    <li>Mauro Dagnino</li>
+    <li>Lucas Daud</li>
+</ul>
+    </footer>
 </body>
 </html>
