--- a/search.html
+++ b/search.html
@@ -20,5 +20,14 @@
         </div>
 
     </header>
+
+
+        <footer>
+<ul>
+    <li>Andres Lopez Oriolo</li>
+    <li>Mauro Dagnino</li>
+    <li>Lucas Daud</li>
+</ul>
+    </footer>
 </body>
 </html>
