--- a/productos.html
+++ b/productos.html
@@ -20,5 +20,29 @@
         </div>
 
     </header>
+<body>
+    <h1>HUEVO DE PASCUA</h1>
+    <h2>Goloriolo</h2>
+     <img src="" alt="">
+    <h3>
+        ¡Llegaron nuestros huevos de Pascua edición especial Goloriolo!
+        Hechos con amor, chocolate de primera y ese toque único que solo vas a encontrar en Goloriolo
+        Tenemos diferentes tamaños para que nadie se quede sin su huevo:
+        Mini huevos perfectos para sorprender
+        Huevos medianos y grandes rellenos de magia
+        Vienen en cajas diseñadas especialmente por nosotros,
+        ¡ideales para regalar!
+    </h3>
+    <h3>10.000</h3>
+    
+</body>
+
+        <footer>
+<ul>
+    <li>Andres Lopez Oriolo</li>
+    <li>Mauro Dagnino</li>
+    <li>Lucas Daud</li>
+</ul>
+    </footer>
 </body>
 </html>
