--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <body>
         <header>
         <a href="./home.html">
-            <img src="./logo goloriolo.png" alt="">
+        <img src="./img/logo goloriolo.png" alt="">
         </a>
         <form action="./search.html">
             <input type="text">
