--- a/search.html
+++ b/search.html
@@ -8,7 +8,7 @@
 <body>
         <header>
         <a href="./home.html">
-            <img src="./logo goloriolo.png" alt="">
+            <img src="./img/logo goloriolo.png" alt="">
         </a>
         <form action="./search.html">
             <input type="text">
