--- a/productos.html
+++ b/productos.html
@@ -23,7 +23,7 @@
 <body>
     <h1>HUEVO DE PASCUA</h1>
     <h2>Goloriolo</h2>
-     <img src="" alt="">
+     <img src="./img/imagen.jpg" alt="">
     <h3>
         ¡Llegaron nuestros huevos de Pascua edición especial Goloriolo!
         Hechos con amor, chocolate de primera y ese toque único que solo vas a encontrar en Goloriolo
