--- a/register.html
+++ b/register.html
@@ -22,6 +22,28 @@
 
     </header>
 
+<form class="register" action="index.html" method="get">
+        <div>
+            <label for="email"></label>
+            <input id="email" type="text" name="email" placeholder="ingrese su email" value="" required>
+        </div>
+        <div>
+            <label for="contraseña"></label>
+            <input id="contraseña" type="password" name="contraseña" placeholder="ingrese su contraseña" value="" required>
+        </div>
+         <div>
+            <label for="contraseña"></label>
+            <input id="contraseña" type="password" name="contraseña" placeholder="ingrese su contraseña nuevamente" value="" required>
+        </div>
+        <div>
+            <button type="submit">Registrarse</button>
+        </div>
+        <a href="./login.html">Ya tengo una cuenta</a>
+        <div>
+            <input type="checkbox" name="Terminos" value="" required="Acepto terminos y Condiciones">
+            <p>Acepto terminos y Condiciones</p>
+        </div>
+    </form>
 
         <footer>
 <ul>
