el home, el body, el aside

--- a/home.html
+++ b/home.html
@@ -23,7 +23,51 @@
     </header>
 
     <body>
-        
+        <aside>
+            <nav>
+                <ul>
+                    <a href="./productos.html">
+                    <li>Alfajores</li>
+                    <li>Chocolates</li>
+                    <li>Navidad</li>
+                    <li>Pascuas</li>
+                    <li>Caramelos</li>
+                    <li>Gomitas</li>
+                    </a>
+                </ul>
+            </nav>
+        </aside>
+
+        <section>
+            <article> #Productos mas vendidos
+                <a href="./productos.html">
+                  <img src="./img/imagen.jpg" alt="">  
+                </a>    
+                <a href="./productos.html">
+                  <img src="./img/pascuas-6.jpg" alt="">  
+                </a>
+                <a href="./productos.html">
+                  <img src="./img/128142-01_arcor-chocolate-butter-toffee-chewy-candy-1lb-bag.jpg" alt="">  
+                </a>
+                <a href="./productos.html">
+                  <img src="./img/3724.jpg" alt="">  
+                </a>
+                <a href="./productos.html">
+                  <img src="./img/432_xlarge.jpg" alt="">  
+                </a>
+                <a href="./productos.html">
+                  <img src="./img/images.jpeg" alt="">  
+                </a>
+            </article>
+            
+            <article> #aleotorios
+
+            </article>
+        </section>
+
+
+
+
     </body>
 
     <footer>
