terminar el home y css del heder

--- a/category.html
+++ b/category.html
@@ -22,6 +22,95 @@
 
     </header>
 
+    <main>
+        <h2>Productos PASCUAS</h2>
+
+        <article>
+                <a href="./productos.html">
+                  <img src="./img/images.jpeg" alt="">  
+                  <h3>Producto</h3>
+                  <p>precio$$$</p>
+                  <p>descripcion</p>
+                </a>
+            </article>
+
+            <article>
+                <a href="./productos.html">
+                  <img src="./img/images.jpeg" alt="">  
+                  <h3>Producto</h3>
+                  <p>precio$$$</p>
+                  <p>descripcion</p>
+                </a>
+            </article>
+
+            <article>
+                <a href="./productos.html">
+                  <img src="./img/images.jpeg" alt="">  
+                  <h3>Producto</h3>
+                  <p>precio$$$</p>
+                  <p>descripcion</p>
+                </a>
+            </article>
+
+            <article>
+                <a href="./productos.html">
+                  <img src="./img/images.jpeg" alt="">  
+                  <h3>Producto</h3>
+                  <p>precio$$$</p>
+                  <p>descripcion</p>
+                </a>
+            </article>
+
+            <article>
+                <a href="./productos.html">
+                  <img src="./img/images.jpeg" alt="">  
+                  <h3>Producto</h3>
+                  <p>precio$$$</p>
+                  <p>descripcion</p>
+                </a>
+            </article>
+
+            <article>
+                <a href="./productos.html">
+                  <img src="./img/images.jpeg" alt="">  
+                  <h3>Producto</h3>
+                  <p>precio$$$</p>
+                  <p>descripcion</p>
+                </a>
+            </article>
+
+            <article>
+                <a href="./productos.html">
+                  <img src="./img/images.jpeg" alt="">  
+                  <h3>Producto</h3>
+                  <p>precio$$$</p>
+                  <p>descripcion</p>
+                </a>
+            </article>
+
+            <article>
+                <a href="./productos.html">
+                  <img src="./img/images.jpeg" alt="">  
+                  <h3>Producto</h3>
+                  <p>precio$$$</p>
+                  <p>descripcion</p>
+                </a>
+            </article>
+
+            <article>
+                <a href="./productos.html">
+                  <img src="./img/images.jpeg" alt="">  
+                  <h3>Producto</h3>
+                  <p>precio$$$</p>
+                  <p>descripcion</p>
+                </a>
+            </article>
+
+
+    </main>
+
+
+
         <footer>
 <ul>
     <li>Andres Lopez Oriolo</li>
