--- a/home.html
+++ b/home.html
@@ -145,7 +145,7 @@
     </main>
 
     <footer>
-<ul>
+<ul class="pie">
     <li>Andres Lopez Oriolo</li>
     <li>Mauro Dagnino</li>
     <li>Lucas Daud</li>
