--- a/register.html
+++ b/register.html
@@ -9,13 +9,17 @@
 <body>
         <header>
         <a href="./home.html">
-            <img src="./img/logo goloriolo.png" alt="">
+            <img src="./img/logo goloriolo.png" alt=""class="logo">
         </a>
-        <form action="./search.html">
+         <article class="buscador">
+        
+            <form action="./search.html">
             <input type="text">
             <button>Buscar...</button>
-        </form>
-        <div>
+        </form>  
+      
+        </article>
+        <div class="login">
             <a href="./login.html">Login</a>
             <a href="./register.html">Registrarse</a>
         </div>
@@ -46,7 +50,7 @@
     </form>
 
         <footer>
-<ul>
+<ul class="pie">
     <li>Andres Lopez Oriolo</li>
     <li>Mauro Dagnino</li>
     <li>Lucas Daud</li>
