el css del aside

--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
     <main>
         <aside>
             <nav>
-                <ul>
+                <ul class="menu">
                     <a href="./category.html">
                     <li>Alfajores</li>
                     <li>Chocolates</li>
