seccion de la review del product

--- a/productos.html
+++ b/productos.html
@@ -41,6 +41,14 @@
         </h3>
         <h3 class="huevo5">$10.000</h3>
     </div>
+    <div id="seccion producto huevo">
+        <form action="get">
+            <p>Rating</p>
+            <textarea name="review" id=""></textarea>
+            <p>Fecha</p>
+            <p>Nombre del usuario</p>
+        </form>
+    </div>
 
     <footer>
         <ul class="pie">
