--- a/productos.html
+++ b/productos.html
@@ -15,9 +15,8 @@
         <article class="buscador">
 
             <form action="./search.html">
-                <input type="text">
-                <button>Buscar...</button>
-            </form>
+            <input type="text" placeholder="Buscar...">
+            <button>Buscar 🔍</button>
 
         </article>
         <div class="login">
