--- a/search.html
+++ b/search.html
@@ -14,8 +14,8 @@
          <article class="buscador">
         
             <form action="./search.html">
-            <input type="text">
-            <button>Buscar...</button>
+            <input type="text" placeholder="Buscar...">
+            <button>Buscar 🔍</button>
         </form>  
       
         </article>
