--- a/home.html
+++ b/home.html
@@ -27,16 +27,17 @@
     </header>
 
     <main>
-        <aside>
+        <aside class="menu">
+            <h2 class="catego">Categorias</h2>
             <nav>
-                <ul class="menu">
+                <ul class="listalado">
                     <a href="./category.html">
                     <li>Alfajores</li>
                     <li>Chocolates</li>
                     <li>Navidad</li>
                     <li>Pascuas</li>
                     <li>Caramelos</li>
-                    <li>Gomitas</li>
+                    <li class="gomitas">Gomitas</li>
                     </a>
                 </ul>
             </nav>
