--- a/category.html
+++ b/category.html
@@ -27,6 +27,21 @@
     </header>
 
     <main>
+      <aside class="menu">
+            <h2 class="catego">Categorias</h2>
+            <nav>
+                <ul class="listalado">
+                    <a href="./category.html">
+                    <li>Alfajores</li>
+                    <li>Chocolates</li>
+                    <li>Navidad</li>
+                    <li>Pascuas</li>
+                    <li>Caramelos</li>
+                    <li class="gomitas">Gomitas</li>
+                    </a>
+                </ul>
+            </nav>
+        </aside>
         <h2>Productos PASCUAS</h2>
 
         <article>
