--- a/productos.html
+++ b/productos.html
@@ -25,6 +25,21 @@
         </div>
 
     </header>
+    <aside class="menu">
+            <h2 class="catego">Categorias</h2>
+            <nav>
+                <ul class="listalado">
+                    <a href="./category.html">
+                    <li>Alfajores</li>
+                    <li>Chocolates</li>
+                    <li>Navidad</li>
+                    <li>Pascuas</li>
+                    <li>Caramelos</li>
+                    <li class="gomitas">Gomitas</li>
+                    </a>
+                </ul>
+            </nav>
+        </aside>
     <div class="huevo1">
         <h1 class="huevo2">HUEVO DE PASCUA</h1>
         <h2 class="huevo3">Goloriolo</h2>
