--- a/search.html
+++ b/search.html
@@ -25,7 +25,21 @@
         </div>
     </header>
 
-
+<aside class="menu">
+            <h2 class="catego">Categorias</h2>
+            <nav>
+                <ul class="listalado">
+                    <a href="./category.html">
+                    <li>Alfajores</li>
+                    <li>Chocolates</li>
+                    <li>Navidad</li>
+                    <li>Pascuas</li>
+                    <li>Caramelos</li>
+                    <li class="gomitas">Gomitas</li>
+                    </a>
+                </ul>
+            </nav>
+        </aside>
         <footer>
 <ul class="pie">
     <li>Andres Lopez Oriolo</li>
