--- a/category.html
+++ b/category.html
@@ -44,14 +44,15 @@
         </aside>
         <h2>Productos PASCUAS</h2>
 
-        <article>
+        <section>
+              <article>
                 <a href="./productos.html">
                   <img src="./img/images.jpeg" alt="">  
                   <h3>Producto</h3>
                   <p>precio$$$</p>
                   <p>descripcion</p>
                 </a>
-            </article>
+              </article>
 
             <article>
                 <a href="./productos.html">
@@ -124,7 +125,7 @@
                   <p>descripcion</p>
                 </a>
             </article>
-
+          </section>
 
     </main>
 
