--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
     </header>
 
     <main>
-        <aside class="menu">
+        <aside class="menu">   
             <h2 class="catego">Categorias</h2>
             <nav>
                 <ul class="listalado">
@@ -42,6 +42,8 @@
                 </ul>
             </nav>
         </aside>
+
+    <div>
 
         <section>TOP MAS VENIDOS
             <article> 
@@ -140,6 +142,7 @@
 
         </section>
 
+    </div>
 
 
 
