--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
 
        <div>
 
-        <section>TOP MAS VENIDOS
+        <section class="productotop">TOP MAS VENIDOS
             <article> 
                 <a href="./productos.html">
                   <img src="./img/imagen.jpg" alt="">  
