--- a/productos.html
+++ b/productos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>product</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -13,11 +13,9 @@
             <img src="./img/logo goloriolo.png" alt="" class="logo">
         </a>
         <article class="buscador">
-
             <form action="./search.html">
             <input type="text" placeholder="Buscar...">
             <button>Buscar 🔍</button>
-
         </article>
         <div class="login">
             <a href="./login.html">Login</a>
@@ -39,8 +37,9 @@
                     </a>
                 </ul>
             </nav>
-        </aside>
-    <div class="huevo1">
+    </aside>
+        <div class="huevo1">
+            <div class="huevo6">
         <h1 class="huevo2">HUEVO DE PASCUA</h1>
         <h2 class="huevo3">Goloriolo</h2>
         <img class="fotohuevo" src="./img/imagen.jpg" alt="">
@@ -54,16 +53,17 @@
             ¡ideales para regalar!
         </h3>
         <h3 class="huevo5">$10.000</h3>
-    </div>
-    <div id="seccion producto huevo">
+        </div>
+        <div id="seccion producto huevo">
         <form action="get">
             <p>Rating</p>
             <textarea name="review" id=""></textarea>
             <p>Fecha</p>
             <p>Nombre del usuario</p>
         </form>
+        </div>
     </div>
-
+    
     <footer>
         <ul class="pie">
             <li>Andres Lopez Oriolo</li>
