--- a/home.html
+++ b/home.html
@@ -47,8 +47,8 @@
 
        <div>
 
-        <section class="productotop">TOP MAS VENIDOS
-            <article> 
+        <section class="productostop">TOP MAS VENIDOS
+            <article class="productostop1"> 
                 <a href="./productos.html">
                   <img src="./img/imagen.jpg" alt="">  
                   <h3>Producto</h3>
@@ -57,7 +57,7 @@
                 </a>    
             </article>    
 
-            <article>
+            <article class="productostop2">
                 <a href="./productos.html">
                   <img src="./img/pascuas-6.jpg" alt="">
                     <h3>Producto</h3>
@@ -66,7 +66,7 @@
                 </a>
             </article>
             
-            <article>
+            <article class="productostop3">
                 <a href="./productos.html">
                   <img src="./img/128142-01_arcor-chocolate-butter-toffee-chewy-candy-1lb-bag.jpg" alt="">  
                   <h3>Producto</h3>
@@ -75,7 +75,7 @@
                 </a>
             </article>
 
-            <article>
+            <article class="productostop3">
                 <a href="./productos.html">
                   <img src="./img/3724.jpg" alt="">  
                   <h3>Producto</h3>
@@ -84,7 +84,7 @@
                 </a>
             </article>
 
-            <article>
+            <article class="productostop4">
                 <a href="./productos.html">
                   <img src="./img/images.jpeg" alt="">  
                   <h3>Producto</h3>
