--- a/productos.html
+++ b/productos.html
@@ -7,6 +7,7 @@
     <title>product</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <header>
         <a href="./home.html">
@@ -14,8 +15,8 @@
         </a>
         <article class="buscador">
             <form action="./search.html">
-            <input type="text" placeholder="Buscar...">
-            <button>Buscar 🔍</button>
+                <input type="text" placeholder="Buscar...">
+                <button>Buscar 🔍</button>
         </article>
         <div class="login">
             <a href="./login.html">Login</a>
@@ -23,47 +24,49 @@
         </div>
 
     </header>
-    <aside class="menu">
+    <main class="mainProduct">
+        <aside class="menu">
             <h2 class="catego">Categorias</h2>
             <nav>
                 <ul class="listalado">
                     <a href="./category.html">
-                    <li>Alfajores</li>
-                    <li>Chocolates</li>
-                    <li>Navidad</li>
-                    <li>Pascuas</li>
-                    <li>Caramelos</li>
-                    <li class="gomitas">Gomitas</li>
+                        <li>Alfajores</li>
+                        <li>Chocolates</li>
+                        <li>Navidad</li>
+                        <li>Pascuas</li>
+                        <li>Caramelos</li>
+                        <li class="gomitas">Gomitas</li>
                     </a>
                 </ul>
             </nav>
-    </aside>
+        </aside>
         <div class="huevo1">
             <div class="huevo6">
-        <h1 class="huevo2">HUEVO DE PASCUA</h1>
-        <h2 class="huevo3">Goloriolo</h2>
-        <img class="fotohuevo" src="./img/imagen.jpg" alt="">
-        <h3 class="huevo4">
-            ¡Llegaron nuestros huevos de Pascua edición especial Goloriolo!
-            Hechos con amor, chocolate de primera y ese toque único que solo vas a encontrar en Goloriolo
-            Tenemos diferentes tamaños para que nadie se quede sin su huevo:
-            Mini huevos perfectos para sorprender
-            Huevos medianos y grandes rellenos de magia
-            Vienen en cajas diseñadas especialmente por nosotros,
-            ¡ideales para regalar!
-        </h3>
-        <h3 class="huevo5">$10.000</h3>
+                <h1 class="huevo2">HUEVO DE PASCUA</h1>
+                <h2 class="huevo3">Goloriolo</h2>
+                <img class="fotohuevo" src="./img/imagen.jpg" alt="">
+                <h3 class="huevo4">
+                    ¡Llegaron nuestros huevos de Pascua edición especial Goloriolo!
+                    Hechos con amor, chocolate de primera y ese toque único que solo vas a encontrar en Goloriolo
+                    Tenemos diferentes tamaños para que nadie se quede sin su huevo:
+                    Mini huevos perfectos para sorprender
+                    Huevos medianos y grandes rellenos de magia
+                    Vienen en cajas diseñadas especialmente por nosotros,
+                    ¡ideales para regalar!
+                </h3>
+                <h3 class="huevo5">$10.000</h3>
+            </div>
+            <div id="seccion producto huevo">
+                <form action="get">
+                    <p>Rating</p>
+                    <textarea name="review" id=""></textarea>
+                    <p>Fecha</p>
+                    <p>Nombre del usuario</p>
+                </form>
+            </div>
         </div>
-        <div id="seccion producto huevo">
-        <form action="get">
-            <p>Rating</p>
-            <textarea name="review" id=""></textarea>
-            <p>Fecha</p>
-            <p>Nombre del usuario</p>
-        </form>
-        </div>
-    </div>
-    
+    </main>
+
     <footer>
         <ul class="pie">
             <li>Andres Lopez Oriolo</li>
@@ -72,4 +75,5 @@
         </ul>
     </footer>
 </body>
+
 </html>
