css de productos

--- a/home.html
+++ b/home.html
@@ -64,9 +64,10 @@
                 <article class="productostop1">
                     <a href="./productos.html">
                         <img class="fotoP" src="./img/pascuas-6.jpg" alt="">
-                        <h3>Producto</h3>
-                        <p>precio$$$</p>
-                        <p>descripcion</p>
+                        <h3>Huevo Kinder</h3>
+                        <p>$14900</p>
+                        <p>- mas grande que los de daud</p>
+                        
                     </a>
                 </article>
 
