--- a/category.html
+++ b/category.html
@@ -42,12 +42,12 @@
                 </ul>
             </nav>
         </aside>
-        <h2>Productos PASCUAS</h2>
+        <h2>Chocolates</h2>
 
         <section>
               <article>
                 <a href="./productos.html">
-                  <img src="./img/images.jpeg" alt="">  
+                  <img src="" alt="">  
                   <h3>Producto</h3>
                   <p>precio$$$</p>
                   <p>descripcion</p>
