--- a/home.html
+++ b/home.html
@@ -55,9 +55,9 @@
                 <article class="productostop1">
                     <a href="./productos.html">
                         <img class="fotoP" src="./img/imagen.jpg" alt="">
-                        <h3>Producto</h3>
-                        <p>precio$$$</p>
-                        <p>descripcion</p>
+                        <h3>Huevo Goloriolo</h3>
+                        <p>$ 9300</p>
+                        <p>- Hechos de calidad y con amor</p>
                     </a>
                 </article>
 
@@ -65,8 +65,8 @@
                     <a href="./productos.html">
                         <img class="fotoP" src="./img/pascuas-6.jpg" alt="">
                         <h3>Huevo Kinder</h3>
-                        <p>$14900</p>
-                        <p>- mas grande que los de daud</p>
+                        <p>$ 14900</p>
+                        <p>- una sorpresa para los niños</p>
                         
                     </a>
                 </article>
@@ -75,29 +75,76 @@
                     <a href="./productos.html">
                         <img class="fotoP" src="./img/128142-01_arcor-chocolate-butter-toffee-chewy-candy-1lb-bag.jpg"
                             alt="">
-                        <h3>Producto</h3>
-                        <p>precio$$$</p>
-                        <p>descripcion</p>
+                        <h3>Caramelos de Dulce de Leche</h3>
+                        <p>$ 400 / 100g</p>
+                        <p>- los clasicos, de dulce de leche</p>
                     </a>
                 </article>
 
                 <article class="productostop1">
                     <a href="./productos.html">
                         <img class="fotoP" src="./img/3724.jpg" alt="">
-                        <h3>Producto</h3>
-                        <p>precio$$$</p>
-                        <p>descripcion</p>
+                        <h3>Alfajor Rasta</h3>
+                        <p>$ 3000</p>
+                        <p>- tapa dura y bien bajoneros</p>
                     </a>
                 </article>
 
                 <article class="productostop1">
                     <a href="./productos.html">
                         <img class="fotoP" src="./img/images.jpeg" alt="">
-                        <h3>Producto</h3>
-                        <p>precio$$$</p>
-                        <p>descripcion</p>
+                        <h3>Bocadito Marroc</h3>
+                        <p>$ 2300</p>
+                        <p>- el bocadito clasico</p>
                     </a>
                 </article>
+
+                <article class="productostop1">
+                    <a href="./productos.html">
+                        <img class="fotoP" src="./img/images.jpeg" alt="">
+                        <h3>Bocadito Marroc</h3>
+                        <p>$ 2300</p>
+                        <p>- el bocadito clasico</p>
+                    </a>
+                </article>
+
+                <article class="productostop1">
+                    <a href="./productos.html">
+                        <img class="fotoP" src="./img/images.jpeg" alt="">
+                        <h3>Bocadito Marroc</h3>
+                        <p>$ 2300</p>
+                        <p>- el bocadito clasico</p>
+                    </a>
+                </article>
+
+                <article class="productostop1">
+                    <a href="./productos.html">
+                        <img class="fotoP" src="./img/images.jpeg" alt="">
+                        <h3>Bocadito Marroc</h3>
+                        <p>$ 2300</p>
+                        <p>- el bocadito clasico</p>
+                    </a>
+                </article>
+
+                <article class="productostop1">
+                    <a href="./productos.html">
+                        <img class="fotoP" src="./img/images.jpeg" alt="">
+                        <h3>Bocadito Marroc</h3>
+                        <p>$ 2300</p>
+                        <p>- el bocadito clasico</p>
+                    </a>
+                </article>
+
+                <article class="productostop1">
+                    <a href="./productos.html">
+                        <img class="fotoP" src="./img/images.jpeg" alt="">
+                        <h3>Bocadito Marroc</h3>
+                        <p>$ 2300</p>
+                        <p>- el bocadito clasico</p>
+                    </a>
+                </article>
+
+               
 
             </section>
             <div class="pAleatorios">
