--- a/category.html
+++ b/category.html
@@ -47,18 +47,54 @@
         <section>
               <article>
                 <a href="./productos.html">
-                  <img src="" alt="">  
-                  <h3>Producto</h3>
-                  <p>precio$$$</p>
-                  <p>descripcion</p>
+                  <img src="./img/block cofler.jpg" alt="">  
+                  <h3>Cofler Block</h3>
+                  <p>$4.500</p>
+                  <p>-mitad blanco, mitad negro!</p>
                 </a>
               </article>
 
             <article>
                 <a href="./productos.html">
-                  <img src="./img/images.jpeg" alt="">  
-                  <h3>Producto</h3>
-                  <p>precio$$$</p>
+                  <img src="./img/ferrero.jpg" alt="">  
+                  <h3>Ferrero Rocher</h3>
+                  <p>$8.000</p>
+                  <p>descripcion</p>
+                </a>
+            </article>
+
+            <article>
+                <a href="./productos.html">
+                  <img src="./img/guadalest.jpg" alt="">  
+                  <h3>Guadalest</h3>
+                  <p>$5.000</p>
+                  <p>descripcion</p>
+                </a>
+            </article>
+
+            <article>
+                <a href="./productos.html">
+                  <img src="./img/huevitos.jpg" alt="">  
+                  <h3>Huevitos de pascua</h3>
+                  <p>$4.000</p>
+                  <p>descripcion</p>
+                </a>
+            </article>
+
+            <article>
+                <a href="./productos.html">
+                  <img src="./img/huevitos2.jpg" alt="">  
+                  <h3>Huevitos bon o bon</h3>
+                  <p>$3.000</p>
+                  <p>descripcion</p>
+                </a>
+            </article>
+
+            <article>
+                <a href="./productos.html">
+                  <img src="./img/milka.jpg" alt="">  
+                  <h3>Chocolate MIlka</h3>
+                  <p>$5.000</p>
                   <p>descripcion</p>
                 </a>
             </article>
@@ -66,66 +102,20 @@
             <article>
                 <a href="./productos.html">
                   <img src="./img/images.jpeg" alt="">  
-                  <h3>Producto</h3>
-                  <p>precio$$$</p>
+                  <h3>Marroc</h3>
+                  <p>$2.000</p>
                   <p>descripcion</p>
                 </a>
             </article>
 
             <article>
                 <a href="./productos.html">
-                  <img src="./img/images.jpeg" alt="">  
+                  <img src="" alt="">  
                   <h3>Producto</h3>
                   <p>precio$$$</p>
                   <p>descripcion</p>
                 </a>
             </article>
-
-            <article>
-                <a href="./productos.html">
-                  <img src="./img/images.jpeg" alt="">  
-                  <h3>Producto</h3>
-                  <p>precio$$$</p>
-                  <p>descripcion</p>
-                </a>
-            </article>
-
-            <article>
-                <a href="./productos.html">
-                  <img src="./img/images.jpeg" alt="">  
-                  <h3>Producto</h3>
-                  <p>precio$$$</p>
-                  <p>descripcion</p>
-                </a>
-            </article>
-
-            <article>
-                <a href="./productos.html">
-                  <img src="./img/images.jpeg" alt="">  
-                  <h3>Producto</h3>
-                  <p>precio$$$</p>
-                  <p>descripcion</p>
-                </a>
-            </article>
-
-            <article>
-                <a href="./productos.html">
-                  <img src="./img/images.jpeg" alt="">  
-                  <h3>Producto</h3>
-                  <p>precio$$$</p>
-                  <p>descripcion</p>
-                </a>
-            </article>
-
-            <article>
-                <a href="./productos.html">
-                  <img src="./img/images.jpeg" alt="">  
-                  <h3>Producto</h3>
-                  <p>precio$$$</p>
-                  <p>descripcion</p>
-                </a>
-            </article>
-          </section>
 
     </main>
 
