--- a/home.html
+++ b/home.html
@@ -98,7 +98,8 @@
                         <p>- el bocadito clasico</p>
                     </a>
                 </article>
-
+        </div>
+        <div>
                 <article class="productostop1">
                     <a href="./productos.html">
                         <img class="fotoP" src="./img/bon o bon bla.jpeg" alt="">
@@ -115,6 +116,7 @@
                         <p>$ 1800</p>
                         <p>- el mejor regalo</p>
                     </a>
+                 </article>
 
                 <article class="productostop1">
                     <a href="./productos.html">
@@ -142,9 +144,8 @@
                         <p>- la combinacion perfecta</p>
                     </a>
                 </article>
-
-               
-
+        </div>
+        <div>
             </section>
             <div class="pAleatorios">
                     <h1>Productos aleatorios</h1>
@@ -201,8 +202,6 @@
         </div>
 
         </section>
-
-
 
 
     </main>
