--- a/category.html
+++ b/category.html
@@ -42,84 +42,84 @@
                 </ul>
             </nav>
         </aside>
-        <h2>Chocolates</h2>
-
-        <section>
-              <article>
+        
+       <div class="Chocolates2">
+        <h1>Chocolates</h1>
+       </div>
+        <section class="productostop">
+              <article class="productostop1">
                 <a href="./productos.html">
-                  <img src="./img/block cofler.jpg" alt="">  
+                  <img class="fotoP" src="./img/block cofler.jpg" alt="">  
                   <h3>Cofler Block</h3>
                   <p>$4.500</p>
-                  <p>-mitad blanco, mitad negro!</p>
+                  <p>Mitad blanco, mitad negro!</p>
                 </a>
               </article>
 
-            <article>
+            <article class="productostop1">
                 <a href="./productos.html">
-                  <img src="./img/ferrero.jpg" alt="">  
+                  <img class="fotoP" src="./img/ferrero.jpg" alt="">  
                   <h3>Ferrero Rocher</h3>
                   <p>$8.000</p>
-                  <p>descripcion</p>
+                  <p>Bolas de chocolate con nutella y nueces</p>
                 </a>
             </article>
 
-            <article>
+            <article class="productostop1">
                 <a href="./productos.html">
-                  <img src="./img/guadalest.jpg" alt="">  
+                  <img class="fotoP" src="./img/guadalest.jpg" alt="">  
                   <h3>Guadalest</h3>
                   <p>$5.000</p>
-                  <p>descripcion</p>
+                  <p>Bolitas de chocolate con dulce de leche adentro</p>
                 </a>
             </article>
 
-            <article>
+            <article class="productostop1">
                 <a href="./productos.html">
-                  <img src="./img/huevitos.jpg" alt="">  
+                  <img class="fotoP" src="./img/huevitos.jpg" alt="">  
                   <h3>Huevitos de pascua</h3>
                   <p>$4.000</p>
-                  <p>descripcion</p>
+                  <p>Mini huevos de chocolate para las pascuas</p>
                 </a>
             </article>
 
-            <article>
+            <article class="productostop1">
                 <a href="./productos.html">
-                  <img src="./img/huevitos2.jpg" alt="">  
+                  <img class="fotoP" src="./img/huevitos2.jpg" alt="">  
                   <h3>Huevitos bon o bon</h3>
                   <p>$3.000</p>
-                  <p>descripcion</p>
+                  <p>Mini huevos de bon o bon</p>
                 </a>
             </article>
 
-            <article>
+            <article class="productostop1">
                 <a href="./productos.html">
-                  <img src="./img/milka.jpg" alt="">  
-                  <h3>Chocolate MIlka</h3>
+                  <img class="fotoP" src="./img/milka.jpg" alt="">  
+                  <h3>Chocolate milka</h3>
                   <p>$5.000</p>
-                  <p>descripcion</p>
+                  <p>Tablas de chocolate milka</p>
                 </a>
             </article>
 
-            <article>
+            <article class="productostop1">
                 <a href="./productos.html">
-                  <img src="./img/images.jpeg" alt="">  
+                  <img class="fotoP" src="./img/marroc.jpeg" alt="">  
                   <h3>Marroc</h3>
                   <p>$2.000</p>
-                  <p>descripcion</p>
+                  <p>Cuadraditos de chocolate blanco, mani y de leche</p>
                 </a>
             </article>
 
-            <article>
+            <article class="productostop1">
                 <a href="./productos.html">
-                  <img src="" alt="">  
-                  <h3>Producto</h3>
-                  <p>precio$$$</p>
-                  <p>descripcion</p>
+                  <img class="fotoP" src="./img/aguila1-52619ffeb5c02ba1f116334457082637-640-0.jpg" alt="">  
+                  <h3>Chocolate agila</h3>
+                  <p>$5.000</p>
+                  <p>Tabla de chocolate amargo</p>
                 </a>
             </article>
 
     </main>
-
-
 
         <footer>
 <ul class="pie">
