--- a/category.html
+++ b/category.html
@@ -43,9 +43,9 @@
             </nav>
         </aside>
         
-       <div class="Chocolates2">
+       <div class="pAleatorios">
         <h1>Chocolates</h1>
-       </div>
+          </div>
         <section class="productostop">
               <article class="productostop1">
                 <a href="./productos.html">
