--- a/search.html
+++ b/search.html
@@ -24,6 +24,7 @@
             <a href="./register.html">Registrarse</a>
         </div>
     </header>
+    <main>
    <aside class="menu">
             <h2 class="catego">Categorias</h2>
             <nav>
@@ -39,7 +40,9 @@
                 </ul>
             </nav>
         </aside>
- <h2 class="search"> resultados de la busqueda:</h2>
+        <div class="pAleatorios">
+             <h1> Resultados de la busqueda:</h1>
+             </div>
     <section class="productosSearch">
         <article class="productostop1">
                         <img class="fotoP" src="./img/pascuas-6.jpg" alt="">
@@ -67,9 +70,9 @@
                         <a id="vermas" href="./productos.html">Ver +</a>
                     
                 </article>
-    <h3 class="resultados">no hay resultados</h3>
+                <h3 class="resultados">no hay resultados</h3>
     </section>
-
+</main>
     <footer>
 <ul class="pie">
     <li>Andres Lopez Oriolo</li>
