--- a/productos.html
+++ b/productos.html
@@ -56,9 +56,25 @@
                 </h3>
                 <h3 class="huevo5">$10.000</h3>
             </div>
+            <div class="reviews">
             <div class="review">
-                div
-                
+                <p>⭐⭐⭐⭐⭐</p>
+                <p>¡Excelente producto! Me encantó la calidad.</p>
+                <p>Fecha: 23/9/2025</p>
+                <p class="usuario"> Usuario: Hugo Sanchez</p>
+            </div>
+            <div class="review">
+                <p>⭐⭐⭐⭐</p>
+                <p>Muy buen producto, pero me gusta mas el chocolate amargo.</p>
+                <p>Fecha: 24/9/2025</p>
+                <p class="usuario"> Usuario: Javier Pastore</p>
+            </div>
+            <div class="review">
+                <p>⭐⭐⭐⭐⭐</p>
+                <p>Me encanto el chocolate, lo recomiendo muchisimo!.</p>
+                <p>Fecha: 25/9/2025</p>
+                <p class="usuario"> Usuario: Martin Palermo</p>
+            </div>
             </div>
         </div>
     </main>
