--- a/home.html
+++ b/home.html
@@ -152,95 +152,95 @@
             <section class="productostop">
                 
 
-
+                
                 <article class="productostop1">
                     <a href="./productos.html"></a>
-                        <img class="fotoP" src="./img/images.jpeg" alt="">
-                        <h3>Producto</h3>
-                        <p>precio$$$</p>
-                        <p>descripcion</p>
+                        <img class="fotoP" src="./img/alfajor-oreo.jpg.webp" alt="">
+                        <h3>Alfajor Oreo</h3>
+                        <p>$ 1880</p>
+                        <p>- dulce de galletas de chocolate con relleno cremoso de vainilla.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
                 <article class="productostop1">
                     <a href="./productos.html"></a>
-                        <img class="fotoP" src="./img/images.jpeg" alt="">
-                        <h3>Producto</h3>
-                        <p>precio$$$</p>
-                        <p>descripcion</p>
+                        <img class="fotoP" src="./img/hamlet.webp" alt="">
+                        <h3>Chocolate Hamlet</h3>
+                        <p>$ 1129</p>
+                        <p>- Barra de chocolate relleno de dulce de leche</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
                 <article class="productostop1">
                     <a href="./productos.html"></a>
-                        <img class="fotoP" src="./img/images.jpeg" alt="">
-                        <h3>Producto</h3>
-                        <p>precio$$$</p>
-                        <p>descripcion</p>
+                        <img class="fotoP" src="./img/kitkat.webp" alt="">
+                        <h3>Kit Kat</h3>
+                        <p>$ 2199</p>
+                        <p>- barra con capas crujientes de wafers, cubierta de chocolate.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
                 <article class="productostop1">
                     <a href="./productos.html"></a>
-                        <img class="fotoP" src="./img/images.jpeg" alt="">
-                        <h3>Producto</h3>
-                        <p>precio$$$</p>
-                        <p>descripcion</p>
+                        <img class="fotoP" src="./img/palitodelaselva.webp" alt="">
+                        <h3>Palitos de la selva</h3>
+                        <p>$ 7000</p>
+                        <p>- Bolsa de palito de la selva</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
                 <article class="productostop1">
                     <a href="./productos.html"></a>
-                        <img class="fotoP" src="./img/images.jpeg" alt="">
-                        <h3>Producto</h3>
-                        <p>precio$$$</p>
-                        <p>descripcion</p>
+                        <img class="fotoP" src="./img/picodulce.webp" alt="">
+                        <h3>Pico Dulce</h3>
+                        <p>$ 7499</p>
+                        <p>- Bolsa de pico dulce</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
                 <article class="productostop1">
                     <a href="./productos.html"></a>
-                        <img class="fotoP" src="./img/images.jpeg" alt="">
-                        <h3>Producto</h3>
-                        <p>precio$$$</p>
-                        <p>descripcion</p>
+                        <img class="fotoP" src="./img/Reeses.webp" alt="">
+                        <h3>Reeses</h3>
+                        <p>$ 2499</p>
+                        <p>- chocolates que combinan mantequilla de maní cremoso y una capa de chocolate con leche,</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
                 <article class="productostop1">
                     <a href="./productos.html"></a>
-                        <img class="fotoP" src="./img/images.jpeg" alt="">
-                        <h3>Producto</h3>
-                        <p>precio$$$</p>
-                        <p>descripcion</p>
+                        <img class="fotoP" src="./img/rodesia.png" alt="">
+                        <h3>Rhodesia</h3>
+                        <p>$ 1600</p>
+                        <p>chocolate con una mezcla de malta y crema</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
                 <article class="productostop1">
                     <a href="./productos.html"></a>
-                        <img class="fotoP" src="./img/images.jpeg" alt="">
-                        <h3>Producto</h3>
-                        <p>precio$$$</p>
-                        <p>descripcion</p>
+                        <img class="fotoP" src="./img/shot.png" alt="">
+                        <h3>Chocolate Shot</h3>
+                        <p>$ 3000</p>
+                        <p>- chocolate con mantequilla de mani</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
                 <article class="productostop1">
                     <a href="./productos.html"></a>
-                        <img class="fotoP" src="./img/images.jpeg" alt="">
-                        <h3>Producto</h3>
-                        <p>precio$$$</p>
-                        <p>descripcion</p>
+                        <img class="fotoP" src="./img/Sugus.jpg" alt="">
+                        <h3>Bolsa Sugus</h3>
+                        <p>$ 7600</p>
+                        <p>- Bolsa de caramelo Sugus</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
                 <article class="productostop1">
                     <a href="./productos.html"></a>
-                        <img class="fotoP" src="./img/images.jpeg" alt="">
-                        <h3>Producto</h3>
-                        <p>precio$$$</p>
-                        <p>descripcion</p>
+                        <img class="fotoP" src="./img/tita.webp" alt="">
+                        <h3>Chocolate Tita</h3>
+                        <p>$ 1699</p>
+                        <p>galletita bañada en chocolate</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
-                </article>
+                </article>    
 
         </div>
 
