cambios en html3

--- a/category.html
+++ b/category.html
@@ -42,7 +42,7 @@
                 </ul>
             </nav>
         </aside>
-        
+        <div>
        <div class="pAleatorios">
         <h1>Chocolates</h1>
           </div>
@@ -118,7 +118,23 @@
                   <p>Tabla de chocolate amargo</p>
                 </a>
             </article>
-
+            <article class="productostop1">
+                    <a href="./productos.html"></a>
+                        <img class="fotoP" src="./img/shot.png" alt="">
+                        <h3>Chocolate Shot</h3>
+                        <p>$ 3000</p>
+                        <p>- chocolate con mantequilla de mani</p>
+                        <a id="vermas" href="./productos.html">Ver +</a>
+            </article>
+            <article class="productostop1">
+                    <a href="./productos.html"></a>
+                        <img class="fotoP" src="./img/Reeses.webp" alt="">
+                        <h3>Reeses</h3>
+                        <p>$ 2499</p>
+                        <p>- chocolates que combinan mantequilla de maní cremoso y una capa de chocolate con leche,</p>
+                        <a id="vermas" href="./productos.html">Ver +</a>
+            </article>
+       </div>
     </main>
 
         <footer>
