--- a/home.html
+++ b/home.html
@@ -92,7 +92,7 @@
 
                 <article class="productostop1">
                     <a href="./productos.html"></a>
-                        <img class="fotoP" src="./img/images.jpeg" alt="">
+                        <img class="fotoP" src="./img/marroc.jpeg" alt="">
                         <h3>Bocadito Marroc</h3>
                         <p>$ 2300</p>
                         <p>- el bocadito clasico</p>
