--- a/search.html
+++ b/search.html
@@ -40,6 +40,7 @@
                 </ul>
             </nav>
         </aside>
+        <div>
         <div class="pAleatorios">
              <h1> Resultados de la busqueda:</h1>
              </div>
@@ -72,6 +73,7 @@
                 </article>
                 <h3 class="resultados">no hay resultados</h3>
     </section>
+    </div>
 </main>
     <footer>
 <ul class="pie">
