--- a/home.html
+++ b/home.html
@@ -152,7 +152,7 @@
             <section class="productostop">
                 
 
-                
+
                 <article class="productostop1">
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/alfajor-oreo.jpg.webp" alt="">
@@ -174,9 +174,9 @@
                 <article class="productostop1">
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/kitkat.webp" alt="">
-                        <h3>Kit Kat</h3>
+                        <h3>Chocolate Kit Kat</h3>
                         <p>$ 2199</p>
-                        <p>- barra con capas crujientes de wafers, cubierta de chocolate.</p>
+                        <p>- chocolate que consiste en capas de galleta crujiente cubiertas de chocolate, famosa por su textura y sabor irresistibles.</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
                 </article>
 
@@ -200,7 +200,7 @@
                 <article class="productostop1">
                     <a href="./productos.html"></a>
                         <img class="fotoP" src="./img/Reeses.webp" alt="">
-                        <h3>Reeses</h3>
+                        <h3>Chocolate Reeses</h3>
                         <p>$ 2499</p>
                         <p>- chocolates que combinan mantequilla de maní cremoso y una capa de chocolate con leche,</p>
                         <a id="vermas" href="./productos.html">Ver +</a>
