--- a/search.html
+++ b/search.html
@@ -71,6 +71,24 @@
                         <a id="vermas" href="./productos.html">Ver +</a>
                     
                 </article>
+
+                <article class="productostop1">
+                    <a href="./productos.html"></a>
+                        <img class="fotoP" src="./img/Reeses.webp" alt="">
+                        <h3>Chocolate Reeses</h3>
+                        <p>$ 2499</p>
+                        <p>- chocolates que combinan mantequilla de maní cremoso y una capa de chocolate con leche,</p>
+                        <a id="vermas" href="./productos.html">Ver +</a>
+                </article>
+
+                <article class="productostop1">
+                    <a href="./productos.html"></a>
+                        <img class="fotoP" src="./img/kitkat.webp" alt="">
+                        <h3>Chocolate Kit Kat</h3>
+                        <p>$ 2199</p>
+                        <p>- chocolate que consiste en capas de galleta crujiente cubiertas de chocolate, famosa por su textura y sabor irresistibles.</p>
+                        <a id="vermas" href="./productos.html">Ver +</a>
+                </article>
                 <h3 class="resultados">no hay resultados</h3>
     </section>
     </div>
