--- a/category.html
+++ b/category.html
@@ -44,7 +44,7 @@
         </aside>
         <div>
        <div class="pAleatorios">
-        <h1>Chocolates</h1>
+        <h1>CHOCOLATES</h1>
           </div>
         <section class="productostop">
               <article class="productostop1">
