--- a/register.html
+++ b/register.html
@@ -25,30 +25,38 @@
         </div>
 
     </header>
-
+<main>
+    <div class="register2">
+        <h2>Registrarse</h2>
 <form class="register" action="index.html" method="get">
-        <div>
-            <label for="email"></label>
-            <input id="email" type="text" name="email" placeholder="ingrese su email" value="" required>
+        <div  class="register3">
+            <label for="email">Email:</label>
+            <br>
+            <input class="register4" class="register4" id="email" type="text" name="email" placeholder="ingrese su email" value="" required>
         </div>
-        <div>
-            <label for="contraseña"></label>
-            <input id="contraseña" type="password" name="contraseña" placeholder="ingrese su contraseña" value="" required>
+        <div class="register3">
+            <label for="contraseña">Contraseña:</label>
+            <br>
+            <input class="register4" id="contraseña" type="password" name="contraseña" placeholder="ingrese su contraseña" value="" required>
         </div>
-         <div>
-            <label for="contraseña"></label>
-            <input id="contraseña" type="password" name="contraseña" placeholder="ingrese su contraseña nuevamente" value="" required>
+         <div class="register3">
+            <label for="contraseña">Vuelva a introducir su contraseña:</label>
+            <br>
+            <input class="register4" id="contraseña" type="password" name="contraseña" placeholder="ingrese su contraseña nuevamente" value="" required>
         </div>
-        <div>
+        <div class="register3">
             <button type="submit">Registrarse</button>
         </div>
+        <div class="register3">
         <a href="./login.html">Ya tengo una cuenta</a>
-        <div>
+        </div>
+        <div class="register3">
             <input type="checkbox" name="Terminos" value="" required="Acepto terminos y Condiciones">
-            <p>Acepto terminos y Condiciones</p>
+            <label for="terminos">Acepto terminos y Condiciones</label>
         </div>
     </form>
-
+    </div>
+    </main>
         <footer>
 <ul class="pie">
     <li>Andres Lopez Oriolo</li>
